[project]
name = "audio-analysis"
version = "0.1.0"
description = "A comprehensive audio analysis tool for ML/AI audio processing with feature extraction and wavetable synthesis"
readme = "README.md"
authors = [
    { name = "Edgar Montano", email = "edgar.montano@example.com" }
]
requires-python = ">=3.9"
dependencies = [
    "librosa>=0.10.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "soundfile>=0.12.0",
]
license = { text = "MIT" }
keywords = ["audio", "analysis", "librosa", "feature-extraction", "wavetable", "ml", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/edgar-montano/audio-analysis"
Repository = "https://github.com/edgar-montano/audio-analysis"
Issues = "https://github.com/edgar-montano/audio-analysis/issues"

[project.scripts]
audio-analysis = "audio_analysis.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatchling>=1.27.0",
]
